# MapReduce

./: .dockerignore  .gitignore  CMakeLists.txt  DockerFile  Dockerfile  Notes.md  SSL.sh  USER-Logs  gRPCinstall.sh  initialize.sh  install.sh  main.cpp  readme.md  server.crt  server.key
DistributedSystemsHandling/: CMakeLists.txt
DistributedSystemsHandling/InterNodeCommunication/: CMakeLists.txt  RemoteProcedureCalls.cpp  RemoteProcedureCalls.h
DistributedSystemsHandling/InterNodeCommunication/protofiles/: CMakeLists.txt  gRPC_Communication.proto  generate_cpp.sh
DistributedSystemsHandling/InterProcessCommunication/: CMakeLists.txt  RemoteProcedureCalls.cpp  RemoteProcedureCalls.h
DistributedSystemsHandling/InterProcessCommunication/protofiles/: CMakeLists.txt  generate_cpp.sh  server.proto
DistributedSystemsHandling/NodeHandling/: CMakeLists.txt  masterNode.cpp  masterNode.h  server.cpp  server.h
